# django

./: Cargo.toml  README.md
src/: checks.rs  config.rs  context.rs  data.rs  error.rs  main.rs
src/commands/: jellyfin.rs  mod.rs  ping.rs  play.rs  radio.rs  shutdown.rs  stop.rs
src/services/: jellyfin.rs  mod.rs  voice.rs
src/utils/: response.rs
