[package]
name = "django"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.2"
songbird = {
	version = "0.6.0",
	features = ["serenity", "builtin-queue"]
}
symphonia = {
	version = "0.5.2",
	features = ["aac"]
}
tokio = {
	version = "1.52.3",
	features = ["full"]
}
anyhow = "1.0.103"
toml = "1.1.2"
serde = "1.0.228"
reqwest = "0.12"
