[package]
name = "django"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.2"
songbird = {
	version = "0.6.0",
	features = ["builtin-queue"]
}
symphonia = {
    version = "0.5",
    default-features = false,
    features = ["mp3", "flac"]
}
tokio = {
	version = "1.52.3",
	features = ["full"]
}
serde = {
	version = "1.0.228",
	features = ["derive"]
}
reqwest = {
	version = "0.12",
	features = ["json"]
}
serde_json = "1.0.150"
anyhow = "1.0.103"
toml = "1.1.2"

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
